--- a/Simple_Map/index.html
+++ b/Simple_Map/index.html
@@ -32,13 +32,9 @@
     crossorigin=""></script>
 
     <!-- API key -->
-<<<<<<< HEAD
-    <script type="text/javascript" src="config.js"></script>
-=======
-    <!-- <script type="text/javascript" src="static/js/config.js"></script> -->
->>>>>>> main
-    
-    <!-- Our JavaScript -->
+    <script type="text/javascript" src="static/js/config.js"></script>
+
+       <!-- Our JavaScript -->
     <!-- <script type="text/javascript" src="static/js/cities.js"></script> -->
     <script type="text/javascript" src="static/js/challenge_logic.js"></script>
      
